# v4w_robot

./: .gitignore  .gitmodules  LICENSE  README.md
v4w_bringup/: CMakeLists.txt  package.xml
v4w_bringup/launch/: scanXX.launch  v4w.launch
v4w_control/: CMakeLists.txt  package.xml
v4w_control/config/: mapping_param.yaml  mapping_param_rgb.yaml  param.yaml
v4w_control/launch/: arduino_bringup.launch  v4w_camera.launch  v4w_control.launch  v4w_mapping.launch
v4w_control/scripts/: control.py  imu_processor.py  odometry.py  spline_lookup.py  utils.py  v4w1_linear_calibration.json  v4w1_linear_calibration.pkl  v4w1_neg_steering_calibration.json  v4w1_neg_steering_calibration.pkl  v4w1_pos_steering_calibration.pkl  v4w2_pos_steering_calibration.json
v4w_description/: CMakeLists.txt  package.xml
v4w_description/launch/: v4w_description.launch
v4w_description/urdf/: v4w.urdf  v4w.xacro
