<?xml version="1.0"?>
<package format="2">
  <name>v4w_bringup</name>
  <version>1.0.0</version>
  <description>Catkin metapackage for sensor suite</description>
  <maintainer email="placeholder@gmu.edu">Robotixx</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>witmotion_ros</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>ublox_gps</exec_depend>
  <exec_depend>rosserial_python</exec_depend>
  <exec_depend>v4w_control</exec_depend>
  <exec_depend>v4w_description</exec_depend>

</package>
