<?xml version="1.0"?>
<package format="2">
  <name>v4w_control</name>
  <version>0.0.1</version>
  <description>Robot control for v4w</description>

  <maintainer email="adatar@gmu.edu">Aniket Datar</maintainer>

  <license>BSD</license>

  <author email="adatar@gmu.edu">Aniket Datar</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>roslaunch</build_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>rosserial_python</exec_depend>

  <export>
  </export>
</package>