<?xml version="1.0"?>
<package>
  <name>v4w_description</name>
  <version>0.0.1</version>
  <description>URDF robot description for v4w</description>

  <maintainer email="adatar@gmu.edu">Aniket Datar</maintainer>

  <license>BSD</license>

  <author email="adatar@gmu.edu">Aniket Datar</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>

  <export>
  </export>
</package>